# Bolt

./: .gitignore  CMakeLists.txt  ExternalBoost.cmake  ExternalDoxygen.cmake  FindOpenCL.cmake  FindTBB.cmake  LICENSE.txt  README.html  README.md  ReadmeBuild.html  diff---NEW.txt  diff.txt
BoltForC++AMP/tests/scan/: CMakeLists.txt  ReadMe.txt  scan.cpp
BoltForC++AMP/tests/transform/: CMakeLists.txt  transform.vcxproj
BoltForC++AMP/tests/transform_reduce/: CMakeLists.txt  simple_transform_reduce.cpp
BoltForOpenCL/boltCL/: CMakeLists.txt  bolt.cpp  bolt.h  functional.h  reduce.h  reduce_kernels.cl  transform.h  transform_reduce.h  transform_reduce_kernels.cl  transform_shaders.cl
BoltForOpenCL/tests/ReduceTest/: CMakeLists.txt  ReduceTest.cpp  myocl.cpp  myocl.h
BoltForOpenCL/tests/TransformReduceTest/: CMakeLists.txt  TransformReduceTest.cpp
BoltForOpenCL/tests/TransformTest/: CMakeLists.txt  TransformTest.cpp  TransformTest.vcxproj  TransformTest.vcxproj.filters
bench/: CMakeLists.txt  README.txt  benchmark.py  errorHandler.py  measurePerformance.py  performanceTesting.py  plotPerformance.py
bench/AMP/: CMakeLists.txt
bench/AMP/Reduce/: CMakeLists.txt  reduce.cpp  stdafx.cpp
bench/AMP/Scan/: CMakeLists.txt  scan.cpp  stdafx.h
bench/Benchmark/: Benchmark.cpp  CMakeLists.txt  data_type.h
bench/PerformanceMeasure/: README  README.txt  RUN_BENCHMARK.py  benchmark.py  commonPerformance.py  errorHandler.py  measurePerformance.py  performanceTesting.py  plotPerformance.py
bench/amp/: CMakeLists.txt
bench/amp/Reduce/: CMakeLists.txt  reduce.cpp  targetver.h
bench/amp/Scan/: CMakeLists.txt  scan.cpp
bench/amp/Transform/: CMakeLists.txt  transform.cpp
bench/amp/TransformReduce/: CMakeLists.txt  stdafx.h  targetver.h  transform_reduce.cpp
bench/cl/: CMakeLists.txt
bench/cl/Benchmark/: BenchTransformScan.cpp  Benchmark.cpp  CMakeLists.txt  DataType.h  data_type.h  data_type.hpp  statisticalTimer.cpp
bench/cl/CopyBench/: CMakeLists.txt  CopyBench.cpp
bench/cl/CopyBuffer/: CMakeLists.txt  copyBuffer.cpp  stdafx.cpp  stdafx.h  targetver.h
bench/cl/Fill/: CMakeLists.txt  Fill.cpp  fill.cpp  stdafx.h
bench/cl/Generate/: CMakeLists.txt  Generate.cpp  ReadMe.txt  generate.cpp  stdafx.h
bench/cl/InnerProduct/: CMakeLists.txt  InnerProduct.cpp
bench/cl/Reduce/: CMakeLists.txt  ReadMe.txt  Reduce.cpp  reduce.cpp
bench/cl/Scan/: CMakeLists.txt  Scan.cpp  scan.cpp  stdafx.h  targetver.h
bench/cl/ScanByKeyBench/: BenchScanByKey.cpp  CMakeLists.txt
bench/cl/Sort/: CMakeLists.txt  ReadMe.txt  sort.cpp  sort_amp.cpp
bench/cl/StableSort/: CMakeLists.txt  StableSortBench.cpp  stdafx.h
bench/cl/StableSortByKey/: CMakeLists.txt  StableSortByKeyBench.cpp
bench/cl/Transform/: CMakeLists.txt  Transform.cpp  stdafx.cpp  stdafx.h  targetver.h  transform.cpp
bench/cl/TransformScanBench/: BenchTransformScan.cpp  CMakeLists.txt  targetver.h
benchmark/Benchmark/: Benchmark.cpp  CMakeLists.txt  data_type.hpp
bolt/amp/: CMakeLists.txt  bolt.cpp  control.cpp
bolt/cl/: CMakeLists.txt  bolt.cpp  control.cpp
doxy/: CMakeLists.txt  ReadmeBuild.html  SupportedFunction.dox  alpha.dox  bolt.doxy.cfg  bolt.doxy.cfg.in  buildingBolt.dox  buildingExamples.dox  buildingTBB.dox  clcodestring.dox  distributingBoltProjects.dox  faq.dox  mainpage.dox  todo.dox
examples/DeviceVector/: CMakeLists.txt  deviceVector.cpp  stdafx.h  targetver.h
examples/RadixSort/: CMakeLists.txt  RadixSort.cpp
examples/Scan/: CMakeLists.txt  scan.cpp  stdafx.h
examples/Sort/: CMakeLists.txt  myocl.cpp  myocl.h  sort.cpp
examples/Transform/: CMakeLists.txt  Transform.cpp
examples/Version/: CMakeLists.txt  stdafx.h  version.cpp
superbuild/: CMakeLists.txt  ExternalBoost.cmake  ExternalDoxygen.cmake  ExternalGtest.cmake  internal_utils.gTest.vs11.patch.cmake
test/: CMakeLists.txt
test/AMP/: CMakeLists.txt  README.txt
test/AMP/reduce/: CMakeLists.txt  simple_reduce.cpp  stdafx.h
test/AMP/scan/: CMakeLists.txt  scan.cpp
test/AMP/transform/: CMakeLists.txt  ReadMe.txt  simple_transform.cpp
test/AMP/transform_reduce/: CMakeLists.txt  ReadMe.txt  simple_transform_reduce.cpp
test/OpenCL/: CMakeLists.txt  README.txt
test/OpenCL/ReduceTest/: myocl.h
test/OpenCL/TransformReduceTest/: CMakeLists.txt
test/OpenCL/TransformTest/: ReadMe.txt  TransformTest.cpp
test/amp/: CMakeLists.txt  README.txt
test/amp/BinarySearch/: BinarySearch.cpp  CMakeLists.txt  stdafx.cpp
test/amp/BinarySearchTest/: BinarySearchTest.cpp  CMakeLists.txt
test/amp/CopyIfTest/: CMakeLists.txt  CopyIfTest.cpp
test/amp/CopyTest/: CMakeLists.txt  CopyTest.cpp
test/amp/CountTest/: CMakeLists.txt  CountTest.cpp
test/amp/FillTest/: CMakeLists.txt  FillTest.cpp
test/amp/FindTest/: CMakeLists.txt  FindTest.cpp.cpp
test/amp/ForEachTest/: CMakeLists.txt  ForEachTest.cpp
test/amp/GatherTest/: CMakeLists.txt  GatherTest.cpp
test/amp/GenerateTest/: CMakeLists.txt  GenerateTest.cpp
test/amp/InnerProductTest/: CMakeLists.txt  InnerProductTest.cpp
test/amp/LogicalTest/: CMakeLists.txt  LogicalTest.cpp
test/amp/MaxElementTest/: CMakeLists.txt  MaxElementTest.cpp
test/amp/MergeTest/: CMakeLists.txt  MergeTest.cpp
test/amp/MinElementTest/: CMakeLists.txt  MinElementTest.cpp
test/amp/PairTest/: CMakeLists.txt  PairTest.cpp
test/amp/PermutationIteratorTest/: CMakeLists.txt  PermutationIteratorTest.cpp
test/amp/ReduceByKeyTest/: CMakeLists.txt  ReduceByKeyTest.cpp
test/amp/ReduceTest/: CMakeLists.txt  ReduceTest.cpp
test/amp/RemoveTest/: CMakeLists.txt  RemoveTest.cpp
test/amp/ReplaceTest/: CMakeLists.txt  ReadMe.txt  ReplaceTest.cpp
test/amp/ScanByKeyTest/: CMakeLists.txt  ScanByKeyTest.cpp
test/amp/ScanTest/: CMakeLists.txt  ScanTest.cpp
test/amp/ScatterTest/: CMakeLists.txt  ScatterTest.cpp
test/amp/SortByKeyTest/: CMakeLists.txt  SortByKeyTest.cpp
test/amp/common/: stdafx.h  (+2 more)
test/cl/: CMakeLists.txt  README.txt
tools/: AddLicenceInformation.py  CMakeLists.txt  StringifyKernels.cpp  script_tool.txt
tools/StringifyKernels/: CMakeLists.txt  StringifyKernels.cpp
(+1176 files in other folders)
